[project]
name = "overseas-ip0325"
version = "0.1.0"
description = "Clash Verge Rev residential IP chain proxy tooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
